<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/dashboard_tab" />
    <item
        android:id="@+id/menu_rules"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/rules_tab" />
    <item
        android:id="@+id/menu_dns"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/dns_tab" />
    <item
        android:id="@+id/menu_logs"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/logs_tab" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings_tab" />
</menu>
